# F.R.I.D.A.Y

./: .gitignore  .gitmodules  AGENTS.md  README.md  lefthook.yml  opencode.jsonc
.claude-plugin/: marketplace.json  plugin.json
agents/: akashi.md  amanojaku.md  azukiarai.md  bakeneko.md  brand-builder.md  code-runner.md  coding.md  daidarabotchi.md  daikoku.md  data-analyst.md  debugger.md  deep-researcher.md  designer.md  devops-sre.md  enma.md  explorer.md  extractor.md  fact-checker.md  financial.md  formatter.md  fudo.md  henge.md  hyakume.md  jorogumo.md  kagami.md  karakuri.md  karasutengu.md  kataribe.md  kitsune.md  kodama.md  kotodama.md  kudagitsune.md  kurabokko.md  legal-compliance.md  makimono.md  migaki.md  mikoshi.md  mujina.md  oni.md  pm-spec.md  (+16 more)
claude-code/: README.md
cli/: pyproject.toml
cli/src/puraguin/: __main__.py  aggregate.py  cli.py  config.py  db.py  events.py  improve.py  ingest.py  paths.py
cli/src/puraguin/judge/: __init__.py  codex_backend.py  context.py  interface.py  prompts.py
cli/src/puraguin/report/: generate.py
cli/tests/: conftest.py  test_aggregate.py  test_cli.py  test_db.py  test_events.py  test_improve.py  test_ingest.py  test_judge_context.py  test_paths.py  test_report.py  test_smoke.py  test_transcript.py
common/: skills-manifest.json
config/: CLAUDE.md  README.md  settings.json  statusline-command.sh
docs/: OPERATOR.md  routing-manifest.json
hooks/: _emit.sh  skill_post.sh  skill_pre.sh  user_prompt_expansion.sh
opencode/: README.md  fleet-manifest.json
pi-agent/: README.md  package.json
(+82 files in other folders)
