[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "puraguin"
version = "0.1.0"
description = "Skill-usage observability for Claude Code"
requires-python = ">=3.11"
dependencies = [
  "anthropic>=0.40.0",
  "jinja2>=3.1.0"
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0"]

[project.scripts]
puraguin = "puraguin.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
